Upgrade rlua to ^0.17.0, fp_rust to ^0.1.40. Fix errors.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lua_actor"
-version = "0.1.18"
+version = "0.2.0"
 license = "MIT"
 authors = ["JunYi JohnTeee Lee <johnteee@gmail.com>"]
 include = ["src/**/*.rs", "Cargo.toml"]
@@ -22,5 +22,5 @@ path = "src/lib.rs"
 default = []
 
 [dependencies]
-rlua="0.*"
-fp_rust="0.*"
+rlua="^0.17.0"
+fp_rust="^0.1.40"
